# radigenius-backend

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deployment.yml
docker/: Dockerfile  Dockerfile-dev  docker-compose-prod.yml  docker-compose.yml
envs/dev/backend/: .env.sample
envs/dev/db/: .env.sample
envs/prod/backend/: .env.sample
envs/prod/db/: .env.sample
src/: manage.py  setup.cfg
src/application/enums/services/: enum.py
src/application/enums/throttle/: enums.py
src/application/interfaces/commands/: base.py
src/application/interfaces/handlers/: base.py
src/application/paginations/: paginations.py
src/application/permissions/: permissions.py
src/domain/: fields.py  utils.py
src/domain/base/: __init__.py  base_models.py  custom_admin.py  custom_manager.py  custom_queryset.py  model_validator.py
src/infrastructure/commands/: base.py
src/infrastructure/decorators/: check_permission.py  model_initialized_guard.py  with_cached_result.py
src/infrastructure/exceptions/: custom_handlers.py  exceptions.py
src/infrastructure/responses/: responses.py
src/infrastructure/serializers/: base.py
src/infrastructure/services/: cache.py  dto.py  inference.py  ip.py  mail.py  token.py
src/infrastructure/settings/: settings.py
src/infrastructure/throttles/: custom_throttle.py
src/infrastructure/validators/: base.py
src/presentation/api/: urls.py
src/presentation/controllers/: base.py  sample.py
src/presentation/drf_spectacular/: base.py
src/presentation/renderers/: camelize_renderer.py
src/tests/factories/: identity.py
(+100 files in other folders)
